// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: BookCover should match its empty snapshot 1`] = `
<div
  className="book-cover"
  style={undefined}
/>
`;

exports[`Component: BookCover should render the smallthumbnail if thumbnail is not available 1`] = `
<div
  className="book-cover"
  style={
    Object {
      "backgroundImage": "url(\\"test-url-small\\")",
    }
  }
/>
`;

exports[`Component: BookCover should render the thumbnail if both, thumbnail and smallThumbnail, are available 1`] = `
<div
  className="book-cover"
  style={
    Object {
      "backgroundImage": "url(\\"test-url\\")",
    }
  }
/>
`;

exports[`Component: BookCover should render using the thumbnail url as background 1`] = `
<div
  className="book-cover"
  style={
    Object {
      "backgroundImage": "url(\\"test-url\\")",
    }
  }
/>
`;
